[package]
name = "cli-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mini-cache-client"
path = "src/bin/client.rs"

[[bin]]
name = "mini-cache-server"
path = "src/bin/server.rs"


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
regex = "1.10.5"